--- a/src/partials/components/header.hbs
+++ b/src/partials/components/header.hbs
@@ -19,7 +19,7 @@
                     {{/each}}
                 </ul>
             </nav>
-            <button class="header__button button-ellipse">Оставить заявку</button>
+            <button data-src="#order" data-fancybox class="header__button button-ellipse">Оставить заявку</button>
         </div>
     </div>
     {{> menu-burger }}
