--- a/src/partials/layouts/layout.hbs
+++ b/src/partials/layouts/layout.hbs
@@ -11,6 +11,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+    />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -21,6 +25,10 @@
     <meta property="og:image" content="https://via.placeholder.com/350x150">
     <meta property="og:site_name" content="Бренд или имя сайта">
     <meta property="og:locale" content="ru_RU">
+    <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script src="http://parsleyjs.org/dist/parsley.js"></script>
 
     <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="assets/backend/backend.css" />
@@ -50,6 +58,7 @@
         {{> ie-placeholder }}
         <script src="js/app.js"></script>
         <script src="assets/backend/backend.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
         {{!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> --}}
     </div>
 </body>
