--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -119,6 +119,7 @@
 
     .work-now p {
         font: var(--body-XL);
+        margin-bottom: 0;
         @media (max-width: 440px) {
             font-size: 1.6rem;
         }
@@ -204,6 +205,7 @@
         display: flex;
         gap: 1rem;
         padding-top: 2.5rem;
+        align-items: flex-start;
 
         @media (max-width: 1280px) {
             flex-wrap: wrap;
@@ -219,6 +221,7 @@
         width: 24rem;
         font-size: 2.5rem;
         height: 8rem;
+        transition: all 0.5s ease;
 
         @media (max-width: 1280px) {
             width: 100%;
@@ -261,7 +264,7 @@
 
     &__content-container__second-callback form button {
         border: 1px solid #fff;
-        padding: 1.875rem 2.5rem 1.875rem 2.5rem;
+        padding: 2.075rem 2.5rem 1.875rem 2.5rem;
         border-radius: 10px;
         color: #1b74e3;
         font: var(--body-XL);
@@ -334,7 +337,8 @@
         }
     }
 
-    input:required+label {
+    input:required + label {
+        transition: all 0.3s ease;
         font-size: 1.6rem;
         font-weight: 700;
         top: -6px;
@@ -342,7 +346,8 @@
         padding: 0 3px;
     }
 
-    input:invalid+label {
+    input:invalid + label {
+        transition: all 0.3s ease;
         font: var(--body-XL);
         color: #fff;
         position: absolute;
