--- a/src/scss/components/overview.scss
+++ b/src/scss/components/overview.scss
@@ -5,7 +5,6 @@
 
     &__inner {
         position: relative;
-
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,19 +25,15 @@
         position: absolute;
         left: 0;
         top: 0;
-
         width: 100%;
         height: 100%;
-
         border-radius: 1rem;
         object-fit: cover;
-        filter: blur(6px);
         overflow: hidden;
     }
 
     &__video-billet {
         position: relative;
-
         display: flex;
         flex-direction: column-reverse;
         gap: 1.5rem;
@@ -51,7 +46,6 @@
         left: calc(100% + 8rem);
         top: 50%;
         transform: translateY(-50%);
-
         display: block;
         max-width: 34.6rem;
 
@@ -75,9 +69,8 @@
         sup {
             position: absolute;
             padding-left: 1rem;
-
+            top: 54%;
             font: var(--body-XL);
-
             @media (max-width: 770px) {
                 font-size: 2rem;
             }
