--- a/src/scss/components/reviews.scss
+++ b/src/scss/components/reviews.scss
@@ -8,6 +8,9 @@
     @media (max-width: 1439px) {
         padding: 0 2rem;
     }
+    @media (max-width: 767px) {
+        padding: 0 1rem;
+    }
 
     &-wrap {
         display: flex;
@@ -35,6 +38,9 @@
         @media (max-width: 768px) {
             width: unset;
         }
+        @media (max-width: 533px) {
+            overflow: visible;
+        }
     }
     color: var(--main-primary);
     &_items {
@@ -43,7 +49,7 @@
         font: var(--title-S);
         font-size: var(--calc-title-S);
         padding-bottom: 2rem;
-        padding-top: 6.5rem;
+        padding-top: calc(45px + (65 - 45) * (100vw - 360px) / (1680 - 360));
     }
     p {
         font: var(--body-L);
@@ -79,6 +85,16 @@
         width: 4.4vw;
         height: 4.4vw;
         background-color: var(--accent-primary);
+        transition: all 0.5s ease;
+    }
+    .swiper-button-next:hover {
+        background-color: var(--accent-primary-hover);
+    }
+    .swiper-button-prev:hover {
+        background-color: var(--accent-primary-hover);
+    }
+    .swiper-button-prev:hover::after {
+        color: #fff;
     }
     .swiper-button-prev {
         border-radius: 50%;
@@ -93,15 +109,18 @@
     }
 }
 .swiper-button-next::after {
+    transition: all 0.5s linear;
+
     color: #fff;
     font-size: calc(15px + (30 - 15) * (100vw - 400px) / (1680 - 360));
 }
 .swiper-button-prev::after {
+    transition: all 0.5s linear;
     color: var(--accent-primary);
     font-size: calc(15px + (30 - 15) * (100vw - 400px) / (1680 - 360));
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
     // padding-bottom: 5rem;
     // .swiper-pagination {
     //     display: block;
