--- a/src/scss/components/why.scss
+++ b/src/scss/components/why.scss
@@ -126,7 +126,7 @@
 
         @media (max-width: 560px) {
             width: 100%;
-            padding: 2rem 5.6rem;
+            padding: 2rem;
         }
     }
 }
