--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -2262,7 +2262,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="all__three__elements">
+                    <div data-src="#order" data-fancybox class="all__three__elements">
                         <button class="button">Подробнее о сервисе
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19.9957 13.3332C19.7657 13.3332 19.5791 13.5198 19.5807 13.7498C19.5807 13.9798 19.7674 14.1665 19.9974 14.1665C20.2274 14.1665 20.4141 13.9798 20.4141 13.7498C20.4141 13.5198 20.2274 13.3332 19.9957 13.3332" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
