--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -195,7 +195,7 @@
         <div class="overview__inner">
             <video class="overview__video" src="assets/video/umka.mp4" autoplay loop muted></video>
             <div class="overview__video-billet">
-                <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
+                <a data-fancybox href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5">
                 {{> billet }}
                 </a>
                 <span class="overview__video-description">
@@ -2330,9 +2330,9 @@
                
                 <div class="plant__inner_thanks swiper">
                     <div class="swiper-wrapper">
-                    <img data-fancybox class="swiper-slide" src="./img/th.png" alt="">
-                    <img data-fancybox class="swiper-slide" src="./img/th.png" alt="">
-                    <img data-fancybox class="swiper-slide" src="./img/th.png" alt="">
+                    <img data-fancybox class="swiper-slide" src="./img/diplom1.jpg" alt="">
+                    <img data-fancybox class="swiper-slide" src="./img/diplom2.jpg" alt="">
+                    <img data-fancybox class="swiper-slide" src="./img/diplom3.jpg" alt="">
                 </div>
                         
              <div class="swiper__nav">
