--- a/src/partials/layouts/layout.hbs
+++ b/src/partials/layouts/layout.hbs
@@ -26,8 +26,8 @@
     <meta property="og:site_name" content="Бренд или имя сайта">
     <meta property="og:locale" content="ru_RU">
     <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   {{!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> --}}
+   {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> --}}
    <script src="http://parsleyjs.org/dist/parsley.js"></script>
 
     <link rel="stylesheet" href="css/styles.min.css" />
