--- a/src/partials/layouts/layout.hbs
+++ b/src/partials/layouts/layout.hbs
@@ -28,7 +28,7 @@
     <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
    {{!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> --}}
    {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> --}}
-   <script src="http://parsleyjs.org/dist/parsley.js"></script>
+   <script src="https://parsleyjs.org/dist/parsley.js"></script>
 
     <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="assets/backend/backend.css" />
