change href to doc

--- a/src/partials/components/footer.hbs
+++ b/src/partials/components/footer.hbs
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="footer__addition">
-              <a href="/docs/requisites.docx" download target="_blank"  class="footer__addition-download">
+              <a href="docs/requisites.docx" download target="_blank"  class="footer__addition-download">
                 Скачать реквизиты
                 <div class="footer__addition-icon">
                   <svg
